feat: switch appointments to username-based search, add availability slot release, simplify frontend search